# mysql_python_app

./: .dockerignore  .env.test  .gitignore  Docker-compose.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose.yaml  log_config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test.py
.github/actions/: build-docker.yml  setup-env.yml  setup-python.yml
.github/workflows/: build.yml  ci-pipeline.yml  ci-template.yml  dependencies-scan.yml  docker-ci.yml  docker-image.yml  lint.yml  load-test.yml  sast.yml  scan.yml  test.yml
backend/: .env.example  Dockerfile  pytest.ini  requirements.txt
backend/app/: app.py  auth.py  config.py  db.py  logger.py  main.py  schemas.py  utils.py
backend/db/: connection.py
backend/scripts/: __init___db.py
backend/tests/: conftest.py  test_main.py
env/backend/: .env.example
env/db/: .env.example
env/tests/: .env.example
load_tests/: locustfile.py  locustfile_signup.py
load_tests/end_point_test_entry/: locustfile_signup.py
load_tests/endpoints/: delete_user_data_test.py  login_test.py  logout_test.py  signup_test.py  update_user_data_test.py  view_all_users_test.py  view_current_user.py  view_current_user_test.py
load_tests/utils/: utils.py
mock_test/: conftest.py  test_delete_user_data.py  test_healthcheck.py  test_login.py  test_login_user.py  test_logout_user.py  test_signup.py  test_signup_user.py  test_update_user_data.py  test_view_all_users.py  test_view_current_user.py  utils.py
tests/: conftest.py  test_main.py
tests/api/: test_delete_user_data.py  test_login_user.py  utils.py  (+5 more)
(+97 files in other folders)
