[tool.poetry]
name = "mysql-python-app"
version = "0.1.0"
description = "A MySQL + Python application"
authors = ["Padma Dey <padma@klizos.com>"]

[tool.black]
line-length = 150
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | env
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
extend_skip = ["env"]

[tool.bandit]
exclude_dirs = ["*/env/*"]

[tool.poetry.dependencies]
pymysql = "^1.1"

[tool.pytest.ini_options]
pythonpath = ["backend"]
env_files = [".env.test"]
